# lognote

./: README.md  pyproject.toml
.py_vox_logs/: py_vox_report_20260401_234245.json  py_vox_report_20260401_234245.md  py_vox_report_20260401_234315.json  py_vox_report_20260401_234315.md
src/log_box/: core.py
src/lognote/: __init__.py  __main__.py  cli.py  core.py
src/lognote.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/py_vox/: core.py
src/py_vox.egg-info/: PKG-INFO  SOURCES.txt
tests/: demo.py  small_demo.py  test_log_box.py  test_lognote.py  test_vox.py
